@@ -1,0 +1,18 @@
+# Generated by Django 4.2.9 on 2024-02-13 09:33
+
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('system', '0022_alter_tlsprofile_protocols'),
+    ]
+
+    operations = [
+        migrations.AlterField(
+            model_name='messagequeue',
+            name='status',
+            field=models.TextField(choices=[('new', 'New'), ('running', 'Running'), ('done', 'Done'), ('failure', 'Failure')], default='new'),
+        ),
+    ]
