@@ -8,6 +8,8 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ## Unreleased
 ### Added
 - [FRONTEND] Redis stream support for input log
+### Changed
+- [CLUSTER] Evolve daemon's code to allow correctly handling tasks during service shutdowns
 ### Fixed
 - [FRONTEND] Allow skipping unresponsive nodes during HAProxy test_conf
 
